<resources>
    <string name="app_name">ManagingTask</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_register">Login/Register</string>
    <string name="sign_up">Sign Up</string>
    <string name="my_tasks">My Tasks</string>
    <string name="due_to">Due to</string>
    <string name="create_task">Create Task</string>
    <string name="title">Title</string>
    <string name="priority">Priority</string>
    <string name="high">High</string>
    <string name="medium">Normal</string>
    <string name="low">Low</string>
    <string name="description">Description</string>
    <string name="create_event">Create event</string>
    <string name="choose_date">Choose date</string>
    <string name="task_details">Task Details</string>
    <string name="delete_event">Delete event</string>
    <string name="edit_task">Edit Task</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update_task">Update Task</string>
    <string name="notification">Notification</string>
    <string name="choose_time">Choose Time</string>
    <string name="sort_by">Sort by</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="sort_by_name">Sort by Name</string>
    <string name="sort_by_priority">Sort by Priority</string>
    <string name="sort_by_date">Sort by Date</string>
</resources>
