<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent" android:layout_height="match_parent"
        tools:context=".activities.loginActivity.LoginActivity">

    <TextView
            android:id="@+id/signInTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="100dp"
            android:text="@string/sign_in"
            android:textStyle="bold"
            android:textSize="20sp"/>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signInTextView"
            app:hintEnabled="false">

        <EditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailTextInputLayout"
            app:hintEnabled="false">

        <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Switch
            android:id="@+id/loginSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordTextInputLayout"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp"
            android:text="@string/login_register"
            android:layout_gravity="start"/>

    <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginSwitch"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp"
            android:text="@string/sign_in"/>

</androidx.constraintlayout.widget.ConstraintLayout>