<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@color/toolbarColor">

            <ImageView
                    android:id="@+id/arrowBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/arrow_back"
                    android:layout_gravity="center|start"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_task"
                    android:layout_gravity="center"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"/>

        </androidx.appcompat.widget.Toolbar>

        <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/toolbar"
                android:layout_marginTop="24dp"
                android:layout_marginStart="16dp"/>

        <EditText
                android:id="@+id/titleEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"/>

        <!--<View-->
        <!--android:id="@+id/divider1"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="1dp"-->
        <!--android:background="@android:color/darker_gray"-->
        <!--app:layout_constraintTop_toBottomOf="@id/titleEditText"-->
        <!--android:layout_marginStart="8dp"-->
        <!--android:layout_marginEnd="8dp"-->
        <!--android:layout_marginTop="8dp"/>-->

        <TextView
                android:id="@+id/priorityText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/priority"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/titleEditText"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/priorityBtnLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/priorityText"
                app:layout_constraintEnd_toEndOf="parent">

            <Button
                    android:id="@+id/highPriorityBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:text="@string/high"
                    android:textAllCaps="false"
                    android:background="@drawable/btn_bg"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintEnd_toStartOf="@+id/mediumPriorityBtn"/>

            <Button
                    android:id="@+id/mediumPriorityBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:text="@string/medium"
                    android:textAllCaps="false"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/btn_bg"
                    app:layout_constraintStart_toEndOf="@+id/highPriorityBtn"
                    app:layout_constraintTop_toTopOf="@id/highPriorityBtn" app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintEnd_toStartOf="@+id/lowPriorityBtn"/>

            <Button
                    android:id="@+id/lowPriorityBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:text="@string/low"
                    android:textAllCaps="false"
                    android:background="@drawable/btn_bg"
                    app:layout_constraintStart_toEndOf="@+id/mediumPriorityBtn"
                    app:layout_constraintTop_toTopOf="@id/mediumPriorityBtn"
                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.5"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintTop_toBottomOf="@id/priorityBtnLayout"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="10dp"/>

        <!--<TextView-->
        <!--android:id="@+id/description"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/description"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toBottomOf="@id/divider2"-->
        <!--android:layout_marginTop="16dp"-->
        <!--android:layout_marginStart="16dp"/>-->

        <!--<EditText-->
        <!--android:id="@+id/descriptionEditText"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/description"-->
        <!--android:layout_marginTop="8dp"-->
        <!--android:layout_marginStart="16dp"-->
        <!--android:layout_marginEnd="16dp"/>-->

        <!--<View-->
        <!--android:id="@+id/divider3"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="1dp"-->
        <!--android:background="@android:color/darker_gray"-->
        <!--app:layout_constraintTop_toBottomOf="@id/descriptionEditText"-->
        <!--android:layout_marginStart="8dp"-->
        <!--android:layout_marginEnd="8dp"-->
        <!--android:layout_marginTop="8dp"/>-->

        <TextView
                android:id="@+id/calendar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Calendar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider2"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"/>

        <Button
                android:id="@+id/dateBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_date"
                android:textAllCaps="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/timeBtn"
                app:layout_constraintTop_toBottomOf="@+id/calendar"
                app:layout_constraintBottom_toTopOf="@+id/divider3"/>
        <Button
                android:id="@+id/timeBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_time"
                android:textAllCaps="false"
                app:layout_constraintStart_toEndOf="@+id/dateBtn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/calendar"
                app:layout_constraintBottom_toBottomOf="@+id/dateBtn"/>

        <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintTop_toBottomOf="@id/dateBtn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"/>

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.9"/>

        <Button
                android:id="@+id/createEventBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_event"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="parent"/>




    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>