<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent" android:layout_height="match_parent"
        xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/toolbarColor">

        <ImageView
                android:id="@+id/arrowBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/arrow_back"
                android:layout_gravity="center|start"/>

        <TextView
                android:id="@+id/toolbarTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task_details"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:textColor="@android:color/black"/>

        <ImageView
                android:id="@+id/editBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/edit_btn"
                android:layout_marginEnd="16dp"
                android:layout_gravity="center|end"/>

    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/taskDetailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            android:visibility="visible">

        <LinearLayout
                android:id="@+id/titleLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@drawable/title_task_bg"
                android:layout_marginTop="16dp">

            <TextView
                    android:id="@+id/titleTask"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Meetings with client for discussting a new project"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/toolbar"
                    android:layout_marginTop="24dp"
                    android:layout_marginStart="16dp"/>

            <TextView
                    android:id="@+id/dateText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Tuesday 19 Feb, 2019"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/toolbar"
                    android:layout_marginTop="24dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="8dp"/>


        </LinearLayout>

        <TextView
                android:id="@+id/priorityText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/priority"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/titleLayout"
                app:layout_constraintBottom_toTopOf="@id/divider1"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="16dp"/>

        <ImageView
                android:id="@+id/arrowUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/arrow_up"
                app:layout_constraintEnd_toStartOf="@+id/priorityValue"
                app:layout_constraintTop_toTopOf="@id/priorityText"
                android:layout_marginStart="16dp"/>

        <TextView
                android:id="@+id/priorityValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/priorityText"
                tools:text="High"
                android:layout_marginEnd="16dp"/>

        <View
                android:id="@+id/divider1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintTop_toBottomOf="@id/priorityText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"/>

        <!--<TextView-->
        <!--android:id="@+id/description"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/description"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toBottomOf="@id/divider1"-->
        <!--android:layout_marginTop="16dp"-->
        <!--android:layout_marginStart="16dp"/>-->

        <!--<TextView-->
        <!--android:id="@+id/descriptionText"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/description"-->
        <!--android:layout_marginTop="8dp"-->
        <!--android:layout_marginStart="16dp"-->
        <!--android:layout_marginEnd="16dp"-->
        <!--android:textColor="@android:color/black"-->
        <!--tools:text="Need to meet with clients to discuss project before 19 Feb"/>-->

        <!--<View-->
        <!--android:id="@+id/divider2"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="1dp"-->
        <!--android:background="@android:color/darker_gray"-->
        <!--app:layout_constraintTop_toBottomOf="@id/descriptionText"-->
        <!--android:layout_marginStart="8dp"-->
        <!--android:layout_marginEnd="8dp"-->
        <!--android:layout_marginTop="16dp"/>-->

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/editTaskLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            android:visibility="invisible">

        <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="24dp"
                android:layout_marginStart="16dp"/>

        <EditText
                android:id="@+id/titleEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"/>

        <TextView
                android:id="@+id/priorityEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/priority"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/titleEditText"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/priorityBtnLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/priorityEditText"
                app:layout_constraintEnd_toEndOf="parent">

            <Button
                    android:id="@+id/highPriorityBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:text="@string/high"
                    android:textAllCaps="false"
                    android:background="@drawable/btn_bg"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintEnd_toStartOf="@+id/mediumPriorityBtn"/>

            <Button
                    android:id="@+id/mediumPriorityBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:text="@string/medium"
                    android:textAllCaps="false"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/btn_bg"
                    app:layout_constraintStart_toEndOf="@+id/highPriorityBtn"
                    app:layout_constraintTop_toTopOf="@id/highPriorityBtn" app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintEnd_toStartOf="@+id/lowPriorityBtn"/>

            <Button
                    android:id="@+id/lowPriorityBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:text="@string/low"
                    android:textAllCaps="false"
                    android:background="@drawable/btn_bg"
                    app:layout_constraintStart_toEndOf="@+id/mediumPriorityBtn"
                    app:layout_constraintTop_toTopOf="@id/mediumPriorityBtn"
                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.5"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintTop_toBottomOf="@id/priorityBtnLayout"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"/>

        <TextView
                android:id="@+id/calendar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Calendar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider2"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"/>

        <Button
                android:id="@+id/calendarBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_date"
                android:textAllCaps="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/calendar"
                app:layout_constraintVertical_bias="0"
                app:layout_constraintBottom_toTopOf="@+id/divider4"/>

        <View
                android:id="@+id/divider4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintTop_toBottomOf="@id/calendarBtn"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
            android:id="@+id/deleteBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_event"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="visible"/>

    <Button
            android:id="@+id/updateTaskBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_task"
            android:textAllCaps="false"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>